--- a/app/src/main/res/layout/log_list.xml
+++ b/app/src/main/res/layout/log_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/log_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="?android:attr/actionBarSize"
+        android:paddingTop="@dimen/margin_small"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
