--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="list_item_height">300dp</dimen>
-    <dimen name="margin_medium">10dp</dimen>
-    <dimen name="test_size">100sp</dimen>
+    <dimen name="margin_xsmall">1dp</dimen>
+    <dimen name="margin_small">5dp</dimen>
+    <dimen name="margin_medium">15dp</dimen>
+    <dimen name="margin_large">25dp</dimen>
+    <dimen name="text_size">25sp</dimen>
 </resources>
